add get audio
