# internal/api/oas_client_gen.go
@@ -69,6 +69,12 @@ type Invoker interface {
 	//
 	// DELETE /sessions
 	DeleteSession(ctx context.Context) (DeleteSessionRes, error)
+	// GetAudio invokes getAudio operation.
+	//
+	// This operation gets an audio with the given ID.
+	//
+	// GET /audios/{id}
+	GetAudio(ctx context.Context, params GetAudioParams) (GetAudioRes, error)
 	// GetAudioFile invokes getAudioFile operation.
 	//
 	// This operation streams an audio file with the given ID. The client can request the entire file or
@@ -661,6 +667,96 @@ func (c *Client) sendDeleteSession(ctx context.Context) (res DeleteSessionRes, e
 
 	stage = "DecodeResponse"
 	result, err := decodeDeleteSessionResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// GetAudio invokes getAudio operation.
+//
+// This operation gets an audio with the given ID.
+//
+// GET /audios/{id}
+func (c *Client) GetAudio(ctx context.Context, params GetAudioParams) (GetAudioRes, error) {
+	res, err := c.sendGetAudio(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendGetAudio(ctx context.Context, params GetAudioParams) (res GetAudioRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("getAudio"),
+		semconv.HTTPMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/audios/{id}"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, "GetAudio",
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [2]string
+	pathParts[0] = "/audios/"
+	{
+		// Encode "id" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "id",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.StringToString(params.ID))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[1] = encoded
+	}
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeGetAudioResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
